fix spacing on the sort container to support all widths

--- a/src/Components/LandingCurrencyContainer/LandingCurrencyContainer.css
+++ b/src/Components/LandingCurrencyContainer/LandingCurrencyContainer.css
@@ -22,6 +22,9 @@
   right: 0;
   z-index: 4;
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  margin: 1rem 0;
 }
 
 .sort button {
@@ -30,13 +33,11 @@
   text-transform: uppercase;
   font-size: 0.8rem;
   letter-spacing: 1px;
-  margin-right: 1rem;
   text-decoration: none;
   display: inline-block;
   transition: 0.3s;
   border: none;
   border-bottom: 3px solid transparent;
-  margin: 1rem 2rem;
 }
 
 .sort-box button:hover {
